// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/Choice Step Active 1`] = `
.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
  opacity: 0.8;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14:hover {
  color: #6e849a;
  opacity: 1;
}

.c14:active {
  color: #6e849a;
  opacity: 1;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
  opacity: 0.8;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11:hover {
  color: #3a5999;
  opacity: 1;
}

.c11:active {
  color: #3a5999;
  opacity: 1;
}

.c17 .c10 {
  color: #fff;
}

.c18 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c19 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px #5d9df5;
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c13::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Choice Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#3a5999"
              size={16}
            >
              <svg
                data-file-name="SvgChoice"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Order Pizza
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            Order my favourite
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            Where is my order?
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c14"
              color="#6e849a"
              size={16}
            >
              <svg
                data-file-name="SvgElse"
              />
            </span>
          </div>
          <span
            className="c15"
          >
            Else
          </span>
          <div
            className="c16"
            color="#8da2b5"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Connected 1`] = `
.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
  opacity: 0.8;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14:hover {
  color: #6e849a;
  opacity: 1;
}

.c14:active {
  color: #6e849a;
  opacity: 1;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
  opacity: 0.8;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11:hover {
  color: #3a5999;
  opacity: 1;
}

.c11:active {
  color: #3a5999;
  opacity: 1;
}

.c17 .c10 {
  color: #fff;
}

.c18 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c19 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c13::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#62778c1f,#62778c3d 100%);
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 9px;
  width: 9px;
  background: linear-gradient(to bottom,#8da2b51f,#8da2b53d 100%);
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Choice Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#3a5999"
              size={16}
            >
              <svg
                data-file-name="SvgChoice"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Order Pizza
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            Order my favourite
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            Where is my order?
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c14"
              color="#6e849a"
              size={16}
            >
              <svg
                data-file-name="SvgElse"
              />
            </span>
          </div>
          <span
            className="c15"
          >
            Else
          </span>
          <div
            className="c16"
            color="#8da2b5"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Empty 1`] = `
.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
  opacity: 0.8;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11:hover {
  color: #6e849a;
  opacity: 1;
}

.c11:active {
  color: #6e849a;
  opacity: 1;
}

.c14 .c10 {
  color: #fff;
}

.c15 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c16 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c13::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Choice Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#6e849a"
              size={16}
            >
              <svg
                data-file-name="SvgElse"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Else
          </span>
          <div
            className="c13"
            color="#8da2b5"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Multiple 1`] = `
.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
  opacity: 0.8;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14:hover {
  color: #6e849a;
  opacity: 1;
}

.c14:active {
  color: #6e849a;
  opacity: 1;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
  opacity: 0.8;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11:hover {
  color: #3a5999;
  opacity: 1;
}

.c11:active {
  color: #3a5999;
  opacity: 1;
}

.c17 .c10 {
  color: #fff;
}

.c18 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c19 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c13::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Choice Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#3a5999"
              size={16}
            >
              <svg
                data-file-name="SvgChoice"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Order Pizza
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            Order my favourite
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          />
          <span
            className="c12"
          >
            Where is my order?
          </span>
          <div
            className="c13"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c14"
              color="#6e849a"
              size={16}
            >
              <svg
                data-file-name="SvgElse"
              />
            </span>
          </div>
          <span
            className="c15"
          >
            Else
          </span>
          <div
            className="c16"
            color="#8da2b5"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Creator/Steps/Choice Step Single 1`] = `
.c14 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
  opacity: 0.8;
}

.c14 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c14:hover {
  color: #6e849a;
  opacity: 1;
}

.c14:active {
  color: #6e849a;
  opacity: 1;
}

.c11 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #3a5999;
  opacity: 0.8;
}

.c11 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c11:hover {
  color: #3a5999;
  opacity: 1;
}

.c11:active {
  color: #3a5999;
  opacity: 1;
}

.c17 .c10 {
  color: #fff;
}

.c18 .c10 {
  color: #6e849a;
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c3 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c9 {
  width: 16px;
  margin-right: 16px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 .c7:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06), 0 0 0 1px rgba(17,49,96,0.08);
}

.c4 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c19 .c5:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c13 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c13::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c16 {
  position: relative;
  height: 54px;
  width: 42px;
  cursor: copy;
  padding-left: 12px;
  margin: -16px -16px -16px 0;
}

.c16::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c12 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #132144;
}

.c15 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

<div
  className="c0"
>
  <header
    className="c1"
  >
    <span
      className="c2"
    >
      Choice Block
    </span>
  </header>
  <section
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c11"
              color="#3a5999"
              size={16}
            >
              <svg
                data-file-name="SvgChoice"
              />
            </span>
          </div>
          <span
            className="c12"
          >
            Order Pizza
          </span>
          <div
            className="c13"
          />
        </div>
      </div>
      <div
        className="c5 c6"
      >
        <div
          className="c7 c8"
        >
          <div
            className="c9"
          >
            <span
              className="c10 c14"
              color="#6e849a"
              size={16}
            >
              <svg
                data-file-name="SvgElse"
              />
            </span>
          </div>
          <span
            className="c15"
          >
            Else
          </span>
          <div
            className="c16"
            color="#8da2b5"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
